--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Cart Cell/CartTableViewCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Cart Cell/CartTableViewCell.xib
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="bSq-aj-X74">
-                        <rect key="frame" x="5" y="5" width="146" height="146"/>
+                        <rect key="frame" x="5" y="10" width="136" height="136"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="bSq-aj-X74" secondAttribute="height" multiplier="1:1" id="f6p-rc-qxm"/>
                         </constraints>
@@ -28,32 +28,32 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Watch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XbP-zh-2wT">
-                        <rect key="frame" x="161" y="15" width="286" height="21"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Watch" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XbP-zh-2wT">
+                        <rect key="frame" x="151" y="15" width="296" height="18"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Yp-og-uti">
-                        <rect key="frame" x="161" y="46" width="286" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                        <rect key="frame" x="151" y="43" width="296" height="16"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                         <color key="textColor" red="0.26605003240000002" green="0.26605003240000002" blue="0.26605003240000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1499.90 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9O-J5-35d">
-                        <rect key="frame" x="161" y="125" width="67.5" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="151" y="129" width="57" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.26605003240000002" green="0.26605003240000002" blue="0.26605003240000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount: 1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wUG-hn-jNl">
-                        <rect key="frame" x="348" y="75" width="94" height="34"/>
+                    <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount: 1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wUG-hn-jNl">
+                        <rect key="frame" x="343" y="75" width="94" height="34"/>
                         <color key="textColor" red="0.35893876899999999" green="0.35893876899999999" blue="0.35893876899999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                     <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="PHV-jP-Qas">
-                        <rect key="frame" x="348" y="114" width="94" height="32"/>
+                        <rect key="frame" x="343" y="114" width="94" height="32"/>
                         <connections>
                             <action selector="changeAmount:" destination="KGk-i7-Jjw" eventType="valueChanged" id="9Fz-Z8-KHZ"/>
                         </connections>
@@ -63,11 +63,12 @@
                     <constraint firstItem="XbP-zh-2wT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="1fD-4w-Ch0"/>
                     <constraint firstAttribute="trailing" secondItem="0Yp-og-uti" secondAttribute="trailing" constant="5" id="52n-QA-yFQ"/>
                     <constraint firstItem="v9O-J5-35d" firstAttribute="leading" secondItem="bSq-aj-X74" secondAttribute="trailing" constant="10" id="8wm-jA-zHk"/>
-                    <constraint firstAttribute="trailing" secondItem="PHV-jP-Qas" secondAttribute="trailing" constant="10" id="G6k-a3-0uH"/>
+                    <constraint firstAttribute="trailing" secondItem="PHV-jP-Qas" secondAttribute="trailing" constant="15" id="G6k-a3-0uH"/>
                     <constraint firstItem="XbP-zh-2wT" firstAttribute="leading" secondItem="bSq-aj-X74" secondAttribute="trailing" constant="10" id="GOR-9p-iL3"/>
                     <constraint firstItem="0Yp-og-uti" firstAttribute="leading" secondItem="bSq-aj-X74" secondAttribute="trailing" constant="10" id="IUO-ln-V3m"/>
+                    <constraint firstItem="PHV-jP-Qas" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.207965" id="LZd-mh-J7p"/>
                     <constraint firstAttribute="bottom" secondItem="PHV-jP-Qas" secondAttribute="bottom" constant="10" id="QkM-vx-YLz"/>
-                    <constraint firstItem="bSq-aj-X74" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="QoJ-nv-ccl"/>
+                    <constraint firstItem="bSq-aj-X74" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="QoJ-nv-ccl"/>
                     <constraint firstItem="wUG-hn-jNl" firstAttribute="leading" secondItem="PHV-jP-Qas" secondAttribute="leading" id="Vun-Lb-OZp"/>
                     <constraint firstItem="wUG-hn-jNl" firstAttribute="trailing" secondItem="PHV-jP-Qas" secondAttribute="trailing" id="joa-Wa-70B"/>
                     <constraint firstItem="0Yp-og-uti" firstAttribute="top" secondItem="XbP-zh-2wT" secondAttribute="bottom" constant="10" id="kpf-bI-rzQ"/>
@@ -75,7 +76,7 @@
                     <constraint firstAttribute="bottom" secondItem="v9O-J5-35d" secondAttribute="bottom" constant="10" id="niX-P5-Esn"/>
                     <constraint firstAttribute="trailing" secondItem="XbP-zh-2wT" secondAttribute="trailing" constant="5" id="thG-Wg-LT6"/>
                     <constraint firstItem="bSq-aj-X74" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="w0U-AA-JCe"/>
-                    <constraint firstAttribute="bottom" secondItem="bSq-aj-X74" secondAttribute="bottom" constant="5" id="xDt-pp-P2y"/>
+                    <constraint firstAttribute="bottom" secondItem="bSq-aj-X74" secondAttribute="bottom" constant="10" id="xDt-pp-P2y"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
