--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Product Cell/ProductCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Product Cell/ProductCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,7 +23,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CUz-Y7-NJd">
                                 <rect key="frame" x="10" y="10" width="343" height="114"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Giw-Wt-0fS" userLabel="Product Image View">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Giw-Wt-0fS" userLabel="Product Image View">
                                         <rect key="frame" x="0.0" y="0.0" width="109" height="114"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
@@ -30,19 +31,19 @@
                                         <rect key="frame" x="129" y="0.0" width="157.5" height="114"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vKi-TA-wkk" userLabel="Product Name Label">
-                                                <rect key="frame" x="0.0" y="0.0" width="42" height="21.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="41.5" height="21.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IyX-4i-qfR" userLabel="Product Brand Label">
-                                                <rect key="frame" x="0.0" y="44.5" width="42" height="22"/>
+                                                <rect key="frame" x="0.0" y="44.5" width="41.5" height="22"/>
                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Qiv-u0-nWQ" userLabel="Price Label">
-                                                <rect key="frame" x="0.0" y="89.5" width="42" height="24.5"/>
+                                                <rect key="frame" x="0.0" y="89.5" width="41.5" height="24.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -75,11 +76,11 @@
                     <constraint firstAttribute="bottom" secondItem="3f4-wI-RcL" secondAttribute="bottom" id="j7I-cN-Krf"/>
                 </constraints>
             </tableViewCellContentView>
+            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <constraints>
                 <constraint firstItem="Giw-Wt-0fS" firstAttribute="width" secondItem="njF-e1-oar" secondAttribute="width" multiplier="0.3" id="acH-zn-cQs"/>
                 <constraint firstItem="XbW-Cr-6zF" firstAttribute="width" secondItem="njF-e1-oar" secondAttribute="width" multiplier="0.1" id="isk-Up-HhO"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="productDescriptionLabel" destination="IyX-4i-qfR" id="wN3-oe-6XQ"/>
                 <outlet property="productImageView" destination="Giw-Wt-0fS" id="VVi-Wk-sXI"/>
@@ -90,6 +91,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="chevron.compact.right" catalog="system" width="32" height="64"/>
+        <image name="chevron.compact.right" catalog="system" width="64" height="128"/>
     </resources>
 </document>
